--- a/web-project-gateway/src/main/resources/application.yml
+++ b/web-project-gateway/src/main/resources/application.yml
@@ -12,15 +12,15 @@ spring:
     name: web-project-gateway
   cloud:
     gateway:
-      routes: # ??? ??
-        - id: web-project-api # ???? ?? id??? ??? ???? ??
-          predicates: # ??
-            - Path=/api/** # api/ ?? ??? ????
-          uri: lb://WEB-PROJECT-API # ??? ???? WEB-PROJECT-API? ??? ???? ??? ???.
+      routes: # 라우팅 설정
+        - id: web-project-api # 유레카 서버 식별 id
+          predicates: # 조건 설정
+            - Path=/api/** # api/ 경로로 요청이 들어오면
+          uri: lb://WEB-PROJECT-API # 유레카 서버에서 WEB-PROJECT-API로 요청 처리 (로드 밸런싱)
           filters:
-            # url ???
-            # ?<???>? ?? ??? ???? ???? ??? ? ??? ??. ()? ??? ?? ?? -> segment? (.*)? ??
-            # ??(,)? ???? ?? url? ??? url? ?????.
-            # ?? ?? ??? ??? ${???}?? url ???? ?? / ?????? ?? ??.
+            # url 재정의
+            # ?<변수명>은 뒤에 나오는 정규식을 변수처럼 사용할 수 있도록 한다. ()는 하나의 묶음 처리 -> segment는 (.*)를 의미
+            # 콤마(,)를 기준으로 왼쪽 url을 오른쪽 url로 재정의한다.
+            # 콤마 기준 오른쪽 부분은 ${변수명}으로 url 가져오고 앞에 / 붙여준거라고 보면 된다.
             - RewritePath=/web-project-api/(?<segment>.*), /$\{segment}
 
